feat: 서비스 로직 작성 및 GatherDto 정의